--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "next": "^15.3.3",
     "ts-jest": "^29.3.4",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "jest"
+    
   }
 }
