--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "next": "^15.3.3",
-    "ts-jest": "^29.3.4",
-    "test": "jest"
+    "ts-jest": "^29.3.4"
+    
     
   }
 }
