--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.0"
   },
   "devDependencies": {
@@ -33,7 +34,5 @@
     "jest-environment-jsdom": "^29.7.0",
     "next": "^15.3.3",
     "ts-jest": "^29.3.4"
-    
-    
   }
 }
