--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "babel-jest": "^29.7.0",
+    "eslint": "^9.28.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "next": "^15.3.3",
