--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "dependencies": {
     "lucide-react": "^0.400.0",
     "react": "^18.0.0",
+    "react-checkbox": "^0.1.3",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^18.0.0",
+    "recharts": "^2.15.3",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.0"
@@ -31,6 +34,7 @@
     "@types/react-dom": "^18.3.1",
     "babel-jest": "^29.7.0",
     "eslint": "^9.28.0",
+    "eslint-config-next": "^15.3.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "next": "^15.3.3",
