--- a/package.json
+++ b/package.json
@@ -1,45 +1,36 @@
 {
   "name": "tasko-app",
-  "version": "2.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "type-check": "tsc --noEmit",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "lint": "next lint"
   },
   "dependencies": {
-    "lucide-react": "^0.400.0",
-    "react": "^18.0.0",
-    "react-checkbox": "^0.1.3",
-    "react-day-picker": "^9.7.0",
-    "react-dom": "^18.0.0",
-    "recharts": "^2.15.3",
-    "tailwindcss": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.0.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "next": "15.3.4",
+    "lucide-react": "^0.468.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^14.3.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.14",
+    "typescript": "^5.6.3",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^8.34.0",
-    "@typescript-eslint/parser": "^8.34.0",
-    "babel-jest": "^29.7.0",
-    "eslint": "^9.28.0",
-    "eslint-config-next": "^15.3.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "next": "^15.3.3",
-    "ts-jest": "^29.3.4"
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "15.3.4"
   }
 }
